--- a/TODO
+++ b/TODO
@@ -6,6 +6,10 @@ Add login_required decorator to appropriate views
 Integrate URL shortener, image uploader
 Get Satisfaction support
 
+OAuth:
+  Ensure all requests that should be submitted via POST, are
+  Add error detection/handling
+  Move get_authorization_url() into base class
 Design:
   Finish all prose, other writing for app so that Alex may design to it
   Determine new name for application
