--- a/TODO
+++ b/TODO
@@ -6,6 +6,8 @@ Integrate URL shortener, image uploader
 Get Satisfaction support
 Notify user of how many Tweets is too many when refused for excessive activity
 
+Insert shortened URL at cursor instead of appending
+
 OAuth:
   Add error detection/handling
 Design:
