Added notes about implementing my own form-data/multipart encoder.

--- a/TODO
+++ b/TODO
@@ -25,3 +25,4 @@ Long term
 =========
 Support multiple Twitter accounts?
 Show Tweets regarding application on homepage -- people who Tweet @account
+Shorten URLs using user's bit.ly account rather than our own
