--- a/TODO
+++ b/TODO
@@ -2,6 +2,7 @@
 Short term
 ==========
 Add login_required decorator to appropriate views
+  Add post_required decorator as well
 Get Satisfaction support
 Notify user of how many Tweets is too many when refused for excessive activity
 
@@ -10,9 +11,7 @@ Fix notifier so that it is positioned from top of viewport -- right now, when do
 Edit support for Tweets:
   Only allow one edit tab to be opened for a given Tweet
   Set time on edit form to whatever Tweet's post_at time is, rather than default time
-  Don't allow editing of posted Tweets (user can open edit tab, allow Tweet to be posted, then refresh tab)
   Ensure contents of tab not reloaded when switching back to it, overwriting any changes made to content
-  Disable "too many Tweets" check when saving edited Tweet
 
 URL shortener: automatically append "http://" if not present
 
