Fixed bug where "next scheduled Tweet" was in fact the last that would be sent, rather than the first.

--- a/TODO
+++ b/TODO
@@ -17,6 +17,7 @@ Don't allow Tweets posted in past
 Indicate that times are in local timezone
   Use little question mark that, when hovered, displays explanation
 Make image uploader work in IE
+Add "Tweets sent" counter for each user
 
 OAuth: Add error detection/handling
 Design:
