--- a/TODO
+++ b/TODO
@@ -2,15 +2,15 @@
 Short term
 ==========
 Get Satisfaction support
-Indication of how many characters remaining in Tweet
-  Show red when low on characters -- assign different classes
 
 Fix notifier so that it is positioned from top of viewport -- right now, when document scrolled down, notifier may be missed as it always appears at top of document
 Better handle multiple notifications in short span of time
 
 Reset URL shortener & image uploader after Tweet submitted (close them if open)
 Add "Tweets sent" counter for each user
-Add explanation of why we need Twitter password for image uploader
+Improve explanations
+  Don't fade out immediately -- allow user time to click on contained link, such as with "use TwitPic directly" link in image uploader password explanation
+  Always position within visible client area -- don't make browser scroll
 Allow user to use his own bit.ly account (for link tracking, etc.)
 
 Bugs:
