Fixed Tweet character counter not properly resetting after submitting Tweet.

--- a/TODO
+++ b/TODO
@@ -22,6 +22,7 @@ OAuth: Add error detection/handling
 Design:
   Finish all prose, other writing for app so that Alex may design to it
   Determine new name for application
+  Favicon
 
 
 ================
