Refactored init_authenticated.js for neatness.

--- a/TODO
+++ b/TODO
@@ -37,6 +37,8 @@ Design:
   Favicon
   Bigger Tweet box -- too small in comparison with text
 
+Convert submit buttons to links
+
 
 ================
 Before deploying
