Enabled remote_api.

--- a/TODO
+++ b/TODO
@@ -35,6 +35,8 @@ Design:
   Favicon
   Bigger Tweet box -- too small in comparison with text
 
+Use "Sign in with Twitter" graphic for login link -- http://apiwiki.twitter.com/Sign-in-with-Twitter
+
 
 ================
 Before deploying
